[gd_scene load_steps=17 format=3 uid="uid://brvun6l03k0hu"]

[ext_resource type="Script" uid="uid://f86ti6qbssco" path="res://WebOfFate/web_of_fate_controller.gd" id="1_buxrw"]
[ext_resource type="Script" uid="uid://bisyk4bowdvsf" path="res://addons/simple_cards/deck/manager/card_deck_manager.gd" id="2_gdbvl"]
[ext_resource type="PackedScene" uid="uid://c8j8k8rf2432o" path="res://WebOfFate/ui/card_reward_panel.tscn" id="3_reward"]
[ext_resource type="Script" uid="uid://cw1k60qf7hw1h" path="res://WebOfFate/components/player_hand.gd" id="4_tp2j7"]
[ext_resource type="Script" uid="uid://cg5plqwqsx624" path="res://WebOfFate/game_table.gd" id="6_game_table"]
[ext_resource type="PackedScene" uid="uid://d3j8k8rf2430m" path="res://WebOfFate/components/game_slot.tscn" id="7_game_slot"]
[ext_resource type="PackedScene" uid="uid://c8j8k8rf2431n" path="res://WebOfFate/components/thread_renderer.tscn" id="8_thread_renderer"]
[ext_resource type="Resource" path="res://WebOfFate/cards/decks/debug_deck.tres" id="9_debug_deck"]
[ext_resource type="Script" uid="uid://d2tit1216nktl" path="res://WebOfFate/components/screen_shaker.gd" id="10_shaker"]
[ext_resource type="PackedScene" path="res://WebOfFate/ui/chronicle_panel.tscn" id="11_bd2bt"]
[ext_resource type="PackedScene" uid="uid://tooltip12345" path="res://WebOfFate/ui/tooltip_panel.tscn" id="11_tooltip"]
[ext_resource type="PackedScene" uid="uid://c2y4xmn8qp5kw" path="res://WebOfFate/ui/fate_event_popup.tscn" id="12_fate_event"]
[ext_resource type="PackedScene" uid="uid://bx5ywq4s3m8rl" path="res://WebOfFate/ui/hand_selection_panel.tscn" id="13_hand_select"]
[ext_resource type="PackedScene" uid="uid://c5y4xmn8qp500" path="res://WebOfFate/ui/toast_notifications.tscn" id="14_toast"]
[ext_resource type="PackedScene" uid="uid://dm7xk2nt8s4py" path="res://WebOfFate/ui/path_selection_panel.tscn" id="15_path_select"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_62te0"]
expand_margin_left = 75.0
expand_margin_top = 75.0
expand_margin_right = 75.0
expand_margin_bottom = 75.0

[node name="WebOfFateController" type="CanvasLayer"]
script = ExtResource("1_buxrw")

[node name="ToastNotifications" parent="." instance=ExtResource("14_toast")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("10_shaker")

[node name="GameTable" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -70.0
offset_right = 209.57574
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3199999, 1.3199999)
script = ExtResource("6_game_table")

[node name="ThreadRenderer" parent="GameTable" instance=ExtResource("8_thread_renderer")]
layout_mode = 1
offset_left = -2.2727275
offset_top = -34.090916
offset_right = -2.272705
offset_bottom = -34.09091

[node name="Slot_TL" parent="GameTable" instance=ExtResource("7_game_slot")]
layout_mode = 0
offset_left = 30.0
offset_top = -187.0
offset_right = 130.0
offset_bottom = -47.0
slot_id = 0

[node name="Slot_TR" parent="GameTable" instance=ExtResource("7_game_slot")]
layout_mode = 0
offset_left = 360.0
offset_top = -187.0
offset_right = 460.0
offset_bottom = -47.0
slot_id = 1

[node name="Slot_BL" parent="GameTable" instance=ExtResource("7_game_slot")]
layout_mode = 0
offset_left = 30.0
offset_top = 14.0
offset_right = 130.0
offset_bottom = 154.0
slot_id = 2

[node name="Slot_BR" parent="GameTable" instance=ExtResource("7_game_slot")]
layout_mode = 0
offset_left = 360.0
offset_top = 14.0
offset_right = 460.0
offset_bottom = 154.0
slot_id = 3

[node name="Slot_Center" parent="GameTable" instance=ExtResource("7_game_slot")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.568
anchor_top = -1.501
anchor_right = -0.568
anchor_bottom = -1.501
offset_left = 535.4485
offset_top = 119.98848
offset_right = 635.4485
offset_bottom = 259.98853
slot_id = 4

[node name="ColorRect" type="ColorRect" parent="GameTable"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.636365
offset_top = -193.18182
offset_right = -103.03027
offset_bottom = 36.515167
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(2.1658838e-07, 0.40955436, 0.4098053, 1)
metadata/_edit_lock_ = true

[node name="CardDeckManager" type="Node" parent="." node_paths=PackedStringArray("draw_pile", "discard_pile")]
physics_interpolation_mode = 2
script = ExtResource("2_gdbvl")
show_cards = true
starting_deck = ExtResource("9_debug_deck")
draw_pile = NodePath("Draw")
discard_pile = NodePath("Discards")
metadata/_custom_type_script = "uid://bisyk4bowdvsf"

[node name="Draw" type="Control" parent="CardDeckManager"]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 190.0
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="CardDeckManager/Draw"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8424127, 0.83999985)

[node name="Label" type="Label" parent="CardDeckManager/Draw"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME_DECK_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discards" type="Control" parent="CardDeckManager"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -174.0
offset_top = 163.0
offset_right = -74.0
offset_bottom = 303.0
grow_horizontal = 0
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="CardDeckManager/Discards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CardDeckManager/Discards"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME_DISCARD_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHand" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 594.0
offset_right = -42.0
offset_bottom = 594.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_tp2j7")
max_selected = 1
card_spacing = 70.0
max_hand_size = 5
metadata/_custom_type_script = "uid://bbi8i6vef3f6y"

[node name="ColorRect" type="ColorRect" parent="PlayerHand"]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -440.0
offset_right = 197.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.5921569, 0.34901962, 0.5176471, 1)

[node name="GameInfoPanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GameInfoPanel"]
layout_mode = 2

[node name="ChapterLabel" type="Label" parent="GameInfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "GAME_CHAPTER_LABEL"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="GameInfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_PROGRESS_LABEL"
horizontal_alignment = 1

[node name="TurnLabel" type="Label" parent="GameInfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_TURN_LABEL"
horizontal_alignment = 1

[node name="ResourcePanel" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="DestinyPointsLabel" type="Label" parent="ResourcePanel"]
layout_mode = 2
text = "GAME_DP_LABEL"
horizontal_alignment = 1

[node name="ChaosLabel" type="Label" parent="ResourcePanel"]
layout_mode = 2
text = "GAME_CHAOS_LABEL"
horizontal_alignment = 1

[node name="ChaosProgressBar" type="ProgressBar" parent="ResourcePanel"]
layout_mode = 2
show_percentage = false

[node name="WeaveFateButton" type="Button" parent="ResourcePanel"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_WEAVE_BTN"

[node name="StoryPanel" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -314.0
offset_top = -269.0
offset_right = -34.0
offset_bottom = -39.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_62te0")

[node name="ScrollContainer" type="ScrollContainer" parent="StoryPanel"]
layout_mode = 2

[node name="StoryLabel" type="RichTextLabel" parent="StoryPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[i]Fate awaits...[/i]"
fit_content = true

[node name="ChapterStartPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ChapterStartPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="ChapterStartPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Chapter 1"
horizontal_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="ChapterStartPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Chapter description..."

[node name="StartButton" type="Button" parent="ChapterStartPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_BEGIN_BTN"

[node name="CardRewardPanel" parent="." instance=ExtResource("3_reward")]
visible = false

[node name="LevelCompletePanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelCompletePanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="LevelCompletePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GAME_LEVEL_COMPLETE"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="LevelCompletePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_NEXT_LEVEL_BTN"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GAME_GAME_OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GAME_RESTART_BTN"

[node name="TooltipPanel" parent="." instance=ExtResource("11_tooltip")]
visible = false

[node name="ChroniclePanel" parent="." instance=ExtResource("11_bd2bt")]
visible = false

[node name="FateEventPopup" parent="." instance=ExtResource("12_fate_event")]
visible = false

[node name="HandSelectionPanel" parent="." instance=ExtResource("13_hand_select")]
visible = false

[node name="ToastNotifications2" parent="." instance=ExtResource("14_toast")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="PathSelectionPanel" parent="." instance=ExtResource("15_path_select")]
visible = false
